update logo partner, fix intro image on safari & remove share button
# Conflicts:
#	images/closing/logo-partner.png

--- a/scss/components/_toc.scss
+++ b/scss/components/_toc.scss
@@ -53,7 +53,7 @@
                 }
             }
             .avatar {
-                display: block;
+                display: flex;
                 width: 50px;
                 position: relative;
                 // left: -50px;
@@ -62,6 +62,7 @@
                     -webkit-filter: grayscale(100%);
                     filter: grayscale(100%);
                     transition: 0.2s all ease-in-out;
+                    margin-top: auto;
                 }
             }
             &:hover {
