--- a/scss/style.scss
+++ b/scss/style.scss
@@ -146,11 +146,11 @@ section {
   height: 100vh;
 } */
 
-section img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
+// section img {
+//     width: 100%;
+//     height: 100%;
+//     object-fit: cover;
+// }
 
 .intro-gate-left{
     position: fixed;
